<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:background="@color/lightGray">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_20"
            android:src="@drawable/ic_backarrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/form_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:fontFamily="@font/chivobold"
            android:text="@string/form_title"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@id/leftGuide"
            app:layout_constraintTop_toBottomOf="@id/back_btn" />

        <TextView
            android:id="@+id/form_title_subtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:fontFamily="@font/chivoregular"
            android:text="@string/form_subtitle"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="@id/leftGuide"
            app:layout_constraintTop_toBottomOf="@id/form_title_text" />

        <TextView
            android:id="@+id/form_title_mandate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:text="@string/mandate"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/leftGuide"
            app:layout_constraintTop_toBottomOf="@id/form_title_subtext" />


        <LinearLayout
            android:id="@+id/formLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_30"
            android:background="@color/white"
            android:paddingBottom="30dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/form_title_mandate">

            <com.google.android.material.textfield.TextInputLayout

                style="@style/TextInputLayoutStyle"
               >

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/firstName_field"
                    style="@style/TextInputExitTextStyle"
                    android:hint="@string/firstName" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout style="@style/TextInputLayoutStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lastName_field"
                    style="@style/TextInputExitTextStyle"
                    android:hint="@string/lastName" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout style="@style/TextInputLayoutStyle">

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/mail_field"
                    style="@style/TextInputExitTextStyle"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="170dp">

                    <com.google.android.material.textfield.TextInputEditText

                        android:id="@+id/dob_field"
                        style="@style/TextInputExitTextStyle"
                        android:layout_width="match_parent"
                        android:clickable="false"
                        android:drawableEnd="@drawable/dob"
                        android:focusable="false"
                        android:hint="@string/dob"
                        android:text="@string/dformat" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/linearback"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/female_option"
                        style="@style/GenderTextButtonStyle"
                        android:text="Female" />

                    <TextView

                        android:id="@+id/male_option"
                        style="@style/GenderTextButtonStyle"
                        android:text="Male" />

                </LinearLayout>


            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout style="@style/TextInputLayoutStyle">

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/nationality_field"
                    style="@style/TextInputExitTextStyle"

                    android:hint="@string/nationality" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout style="@style/TextInputLayoutStyle">

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/country_field"
                    style="@style/TextInputExitTextStyle"

                    android:hint="@string/country" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout style="@style/TextInputLayoutStyle">

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/phone_field"
                    style="@style/TextInputExitTextStyle"
                    android:hint="@string/mobile"
                    android:inputType="phone" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/createAccBtn"
                style="@style/ButtonStyle"
                android:text="@string/createBtn" />
        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftGuide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

        <ImageView

            android:paddingBottom="50dp"
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/formLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/formLayout"
            app:srcCompat="@drawable/guitar" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guitarguide"
            app:layout_constraintTop_toTopOf="@id/formLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
