<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/welcome"
    android:layout_height="match_parent">




    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/welcome_subtitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:srcCompat="@drawable/clouds" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/margin_20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/logInFbBtn"
            style="@style/ButtonStyle"
            android:backgroundTint="@color/blue"
            android:drawableEnd="@drawable/ic_facebook"
            android:drawableTint="@color/white"
            android:text="@string/login_fb" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/logInMailBtn"
            style="@style/ButtonStyle"
            android:backgroundTint="@color/blue"
            android:text="@string/login_mail" />

        <com.google.android.material.button.MaterialButton

            android:id="@+id/createNewBtn"
            style="@style/ButtonStyle"
            android:text="@string/create_acc" />
    </LinearLayout>

    <TextView
        android:paddingHorizontal="@dimen/margin_20"
        app:layout_constraintBottom_toTopOf="@id/linearLayout"
        app:layout_constraintStart_toStartOf="@id/linearLayout"
        android:layout_marginBottom="@dimen/margin_30"
        android:textSize="17sp"
        android:id="@+id/welcome_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/travel_sub" />

    <TextView
        android:fontFamily="@font/chivobold"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:paddingHorizontal="@dimen/margin_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/welcome_subtitle"
        android:id="@+id/welcome_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/travel_welcome" />


</androidx.constraintlayout.widget.ConstraintLayout>